--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,8 @@
+# cloudbuild.yaml
 steps:
-  - name: 'gcr.io/cloud-builders/terraform'
-    args: ['install']
-  - name: 'gcr.io/cloud-builders/terraform'
-    args: ['apply']
-  - name: 'gcr.io/cloud-builders/python3'
-    args: ['trigger.py']
+  - id: 'terraform init'
+    name: 'hashicorp/terraform:1.0.0'
+    script: terraform init
+  - id: 'terraform apply'
+    name: 'hashicorp/terraform:1.0.0'
+    script: terraform apply --auto-approve
