--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,8 +1,7 @@
-# cloudbuild.yaml
 steps:
   - id: 'terraform init'
-    name: 'hashicorp/terraform:1.0.0'
-    script: terraform init
+    name: 'hashicorp/terraform'
+    args: ['-chdir', 'terraform', 'init']
   - id: 'terraform apply'
-    name: 'hashicorp/terraform:1.0.0'
-    script: terraform apply --auto-approve
+    name: 'hashicorp/terraform'
+    args: ['-chdir', 'terraform', 'apply', '--auto-approve']
