--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,7 @@
 steps:
   - id: 'terraform init'
     name: 'hashicorp/terraform'
-    args: ['-chdir', 'terraform', 'init']
+    args: ['-chdir=terraform', 'terraform', 'init']
   - id: 'terraform apply'
     name: 'hashicorp/terraform'
-    args: ['-chdir', 'terraform', 'apply', '--auto-approve']
+    args: ['-chdir=terraform', 'terraform', 'apply', '--auto-approve']
