--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,17 @@
+# JOB STEPS
 steps:
-  - id: 'terraform init'
-    name: 'hashicorp/terraform'
-    args: ['-chdir=terraform', 'terraform', 'init']
-  - id: 'terraform apply'
-    name: 'hashicorp/terraform'
-    args: ['-chdir=terraform', 'terraform', 'apply', '--auto-approve']
+  - id: "tf init"
+    name: "terraform init"
+    dir: "terraform"
+    args:
+      - -x
+      - -c
+      - terraform init
+
+  - id: "tf apply"
+    name: $_BUILDER_FULL_NAME
+    dir: "terraform"
+    args:
+      - -x
+      - -c
+      - terraform apply 
