--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,7 @@
 # JOB STEPS
 steps:
   - id: "tf init"
+    name: "hashicorp/terraform"
     dir: "terraform"
     args:
       - -x
@@ -8,6 +9,7 @@ steps:
       - terraform init
 
   - id: "tf apply"
+    name: "hashicorp/terraform"
     dir: "terraform"
     args:
       - -x
